yaml/kubia-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: kubia-loadbalancer
          servicePort: 80
